keywords: 'what"s new, features, new, release notes, bugs, limitations, known issues, enhancements, fixes, cloud manager' 
summary: 'Découvrez les nouveautés d"Amazon FSX pour NetApp ONTAP.' 
---
= Nouveautés d'Amazon FSX pour NetApp ONTAP
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
Découvrez les nouveautés de FSX pour ONTAP.



== 02 mars 2025



=== Événements CloudShell dans Tracker

À chaque fois que vous utilisez CloudShell pour exécuter les opérations FSX for ONTAP à partir de workloads BlueXP , les événements apparaissent dans le module de suivi.

link:https://docs.netapp.com/us-en/bluexp-fsx-ontap/use/task-monitor-operations.html["Découvrez comment surveiller et suivre les opérations FSX pour ONTAP dans BlueXP "^]



== 02 février 2025



=== Associer le système de fichiers FSX pour ONTAP à un espace de travail dans BlueXP 

Après l'intégration de BlueXP  en novembre 2024, les nouveaux systèmes de fichiers FSX pour ONTAP n'étaient associés à aucun espace de travail dans BlueXP . Désormais, lorsque vous créez ou découvrez des systèmes de fichiers FSX pour ONTAP, ils sont associés à un espace de travail au sein d'un compte BlueXP .

Si vous disposez déjà de systèmes de fichiers FSX pour ONTAP qui ne sont pas associés à un espace de travail, nous vous aiderons à les associer à un espace de travail dans BlueXP . Vous pouvez le link:https://docs.netapp.com/us-en/bluexp-setup-admin/task-get-help.html#create-a-case-with-netapp-support["Créer un dossier de demande de support avec le support NetApp"^]faire à partir de la console BlueXP . Sélectionnez *Workload Factory* comme service.



=== Suppression du système de fichiers du canevas BlueXP 
