@@ -345,7 +345,6 @@
   <block id="ef7fe40c036b5b08d74837dcb702dc33" category="inline-image-macro">Capture d'écran montrant les éléments que vous devez définir manuellement pour chaque ensemble d'informations d'identification.</block>
   <block id="083fb8583b0a2366ef9a94388dd9640f" category="paragraph"><block ref="083fb8583b0a2366ef9a94388dd9640f" category="inline-image-macro-rx" type="image"></block></block>
   <block id="445f4ba50fbc8e7b285aedb4396412bb" category="inline-image-macro">Une capture d'écran montrant quels types de capacités de charge de travail seront gérables dans le cadre des stratégies contenues dans ces informations d'identification.</block>
-  <block id="0edc9a25423073fcc768405f6aeda88b" category="paragraph"><block ref="0edc9a25423073fcc768405f6aeda88b" category="inline-image-macro-rx" type="image"></block></block>
   <block id="eb73cd2a4bbc3dbb4bbab5f5a9b6fb8d" category="list-text">Dans la section *Créer des stratégies*, activez chacune des capacités de charge de travail que vous souhaitez inclure dans ces informations d'identification. Activez *Storage* pour créer et gérer des systèmes de fichiers.</block>
   <block id="3b9b789374908017040d97f81eb4008d" category="paragraph">Vous pouvez ajouter des fonctionnalités supplémentaires par la suite. Il vous suffit de sélectionner les charges de travail à déployer et à gérer.</block>
   <block id="a488a73463d70a082950f1cd09a4be8c" category="inline-link-macro">Découvrez les autorisations, également appelées modes opérationnels</block>
@@ -653,4 +652,12 @@
   <block id="fd8693cf8f6802fd1c7d50d5742a4c71" category="doc">Événements CloudShell dans Tracker</block>
   <block id="de57e19ed3d5b873e357689269de25a1" category="paragraph">À chaque fois que vous utilisez CloudShell pour exécuter les opérations FSX for ONTAP à partir de workloads BlueXP , les événements apparaissent dans le module de suivi.</block>
   <block id="2d5a4b914acb6c2f03d312067c73ce32" category="section-title">02 mars 2025</block>
+  <block id="4ef50e373522b91f7df59d5cba69a8b7" category="doc">iam:mise à jour des autorisations SimulatePermissionPolicy</block>
+  <block id="b84cda7d6006e8abb6e6264e292b13c0" category="paragraph">Vous pouvez désormais gérer l'<block ref="19f5de89e4c667692a153296018e225f" prefix=" " category="inline-code"></block>autorisation depuis la console BlueXP  lorsque vous ajoutez des informations d'identification de compte AWS supplémentaires ou que vous ajoutez une nouvelle fonctionnalité de charge de travail telle que la charge de travail GenAI.</block>
+  <block id="6cff628e35cc5d429a57e4a125a0bf6b" category="inline-link-macro">Journal des modifications de référence des autorisations</block>
+  <block id="8ee0913e940253bb841c1a05228d81e5" category="paragraph"><block ref="8ee0913e940253bb841c1a05228d81e5" category="inline-link-macro-rx"></block></block>
+  <block id="c1bc5d8eeb872326cb512499f02befb5" category="paragraph"><block ref="c1bc5d8eeb872326cb512499f02befb5" category="inline-image-macro-rx" type="image"></block></block>
+  <block id="04c38dfa84592feebab3e30dfe4a019a" category="list-text">Facultatif : sélectionnez *Activer la vérification automatique des autorisations* pour vérifier si vous disposez des autorisations de compte AWS requises pour effectuer les opérations de charge de travail. L'activation de la vérification ajoute le<block ref="23bd3e826a13b6d94db9e07f105dfed2" prefix=" " category="inline-code"></block> à vos stratégies d'autorisation. L'objectif de cette autorisation est de confirmer les autorisations uniquement. Vous pouvez supprimer l'autorisation après avoir ajouté des informations d'identification, mais nous vous recommandons de la conserver pour empêcher la création de ressources pour des opérations partiellement réussies et pour vous enregistrer de tout nettoyage manuel des ressources requis.</block>
+  <block id="c3c7c9c146408a0ee564eedba4821f52" category="list-text">Facultatif : sélectionnez *Activer la vérification automatique des autorisations* pour vérifier si vous disposez des autorisations de compte AWS requises pour effectuer les opérations de charge de travail. L'activation de la vérification ajoute l'<block ref="19f5de89e4c667692a153296018e225f" prefix=" " category="inline-code"></block>autorisation à vos stratégies d'autorisation. L'objectif de cette autorisation est de confirmer les autorisations uniquement. Vous pouvez supprimer l'autorisation après avoir ajouté des informations d'identification, mais nous vous recommandons de la conserver pour empêcher la création de ressources pour des opérations partiellement réussies et pour vous enregistrer de tout nettoyage manuel des ressources requis.</block>
+  <block id="db54384248c75c5896f34bcb0879b66c" category="section-title">30 mars 2025</block>
 </blocks>
