@@ -1,0 +1,11 @@
+= iam:mise à jour des autorisations SimulatePermissionPolicy
+:allow-uri-read: 
+
+
+
+
+=== iam:mise à jour des autorisations SimulatePermissionPolicy
+
+Vous pouvez désormais gérer l' `iam:SimulatePrincipalPolicy`autorisation depuis la console BlueXP  lorsque vous ajoutez des informations d'identification de compte AWS supplémentaires ou que vous ajoutez une nouvelle fonctionnalité de charge de travail telle que la charge de travail GenAI.
+
+link:https://docs.netapp.com/us-en/workload-setup-admin/permissions-reference.html#change-log["Journal des modifications de référence des autorisations"^]
